src/platformtheme/kfontsettingsdata.cpp
@@ -55,7 +55,7 @@ static const char DefaultFont[] =    "Noto Sans";
 static const KFontData DefaultFontData[KFontSettingsData::FontTypesCount] = {
     { GeneralId, "font",                 DefaultFont,  10, -1, QFont::SansSerif, "Regular" },
     { GeneralId, "fixed",                "Hack",  9, -1, QFont::Monospace, "Regular" },
-    { GeneralId, "toolBarFont",          DefaultFont,  9, -1, QFont::SansSerif, "Regular" },
+    { GeneralId, "toolBarFont",          DefaultFont,  10, -1, QFont::SansSerif, "Regular" },
     { GeneralId, "menuFont",             DefaultFont,  10, -1, QFont::SansSerif, "Regular" },
     { "WM",      "activeFont",           DefaultFont,  10, -1, QFont::SansSerif, "Regular" },
     { GeneralId, "taskbarFont",          DefaultFont,  10, -1, QFont::SansSerif, "Regular" },
